# SpiritSheet

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/backend/: jackclient.cpp  jackclient.h  midiclient.cpp  midiclient.h  midiportmodel.cpp  midiportmodel.h
src/contents/ui/: Main.qml
src/contents/ui/components/: PDFView.qml
src/contents/ui/settings/: GeneralPage.qml  MidiPage.qml
src/utils/: pageImageProvider.cpp  pageImageProvider.h  pdfModel.cpp  pdfModel.h  settings.cpp  settings.h
